Bug 58230 - [SNB IVB HSW regression] I-G-T/gem_cacheing && gem_cpu_concurrent_blit fail
Summary: [SNB IVB HSW regression] I-G-T/gem_cacheing && gem_cpu_concurrent_blit fail
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: Other All
: medium major
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-12-13 07:25 UTC by shui yangwei
Modified: 2017-10-06 14:47 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
case failed dmesg (69.16 KB, text/plain)
2012-12-13 07:25 UTC, shui yangwei
no flags Details
drm/i915: Initialize hardware semaphore state on ring init (4.17 KB, patch)
2012-12-17 16:49 UTC, Mika Kuoppala
no flags Details | Splinter Review
drm/i915: Always clear semaphore mboxes on seqno wrap (1.30 KB, patch)
2012-12-17 16:50 UTC, Mika Kuoppala
no flags Details | Splinter Review

Description shui yangwei 2012-12-13 07:25:48 UTC
Created attachment 71429 [details]
case failed dmesg

Description:
----------------------
I-G-T/gem_cacheing failed, and the followed messages are bisect result.

First bad commit: 
----------------------
commit 9e8e36879f268f1652e11b1c8560bbb67cf4f08e
Author: Mika Kuoppala <mika.kuoppala@linux.intel.com>
Date:   Tue Dec 4 15:12:05 2012 +0200

    drm/i915: Set initial seqno value close to wrap boundary

    To gain confidence in the wrap handling, make it happen quite
    soon after the boot.

    Signed-off-by: Mika Kuoppala <mika.kuoppala@intel.com>
    Signed-off-by: Daniel Vetter <daniel.vetter@ffwll.ch>
Comment 1 shui yangwei 2012-12-13 08:04:38 UTC
I-G-T/gem_cpu_concurrent_blit also failed, bisect result is the same with gem_cacheing.
Comment 2 Mika Kuoppala 2012-12-13 11:02:21 UTC
Was gem_seqno_wrap run before these tests?
Comment 3 Mika Kuoppala 2012-12-13 13:35:33 UTC
It could be that gem_seqno_wrap test interfered with other tests. Please update the igt as it has more robust gem_seqno_wrap.
Comment 4 Yi Sun 2012-12-13 16:01:28 UTC
(In reply to comment #3)
> It could be that gem_seqno_wrap test interfered with other tests. Please
> update the igt as it has more robust gem_seqno_wrap.

I don't think so. Each time file a bug, we always run it separately after a rebooting system. Especially when we bisect it. So I think this should be not relevant with any other one.
Comment 5 Mika Kuoppala 2012-12-17 16:49:27 UTC
Created attachment 71669 [details] [review]
drm/i915: Initialize hardware semaphore state on ring  init
Comment 6 Mika Kuoppala 2012-12-17 16:50:09 UTC
Created attachment 71670 [details] [review]
drm/i915: Always clear semaphore mboxes on seqno wrap
Comment 7 Mika Kuoppala 2012-12-17 16:50:46 UTC
Could you retry the tests with the two patches I attached?
Comment 8 Daniel Vetter 2012-12-19 11:39:16 UTC
Just merged Mika's latest patches, so should be all fixed now in latest dinq.
Comment 9 shui yangwei 2012-12-21 01:12:27 UTC
(In reply to comment #8)
> Just merged Mika's latest patches, so should be all fixed now in latest dinq.

Environment:
---------------------
Kernel: (drm-intel-next-queued)e94fbaa8750a8f20c14718633764fba2e6755825
Some additional commit info:
Author: Mika Kuoppala <mika.kuoppala@linux.intel.com>
Date:   Wed Dec 19 11:13:09 2012 +0200

    drm/i915: Make next_seqno debugs entry to use i915_gem_set_seqno

Description:
---------------------
Test with top commit in latest -next-queued, this issue is fixed.
The nightly today, this issue also not exist.
I will close this bug now.
Comment 10 Florian Mickler 2013-03-04 22:56:00 UTC
A patch referencing this bug report has been merged in Linux v3.9-rc1:

commit f7e98ad4d4a8afa043126a6f24d0a154a684e081
Author: Mika Kuoppala <mika.kuoppala@linux.intel.com>
Date:   Wed Dec 19 11:13:06 2012 +0200

    drm/i915: Initialize hardware semaphore state on ring init
Comment 11 Elizabeth 2017-10-06 14:47:24 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.